--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 project.ext {
-    SUPPORT_LIBRARY_VERSION = "26.0.1"
+    SUPPORT_LIBRARY_VERSION = "26.1.0"
     DAGGER_VERSION = "2.11"
+    ROOM_VERSION = "1.0.0-alpha9-1"
     RX_JAVA_VERSION = "2.1.2"
     RX_ANDROID_VERSION = "2.0.1"
-    LIFECYCLE_VERSION = "1.0.0-alpha9"
+    LIFECYCLE_VERSION = "1.0.0-alpha9-1"
 }
 
 android {
@@ -23,16 +24,26 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+        incremental = false
+    }
+
+    dataBinding.enabled true
 }
 
 kapt {
     generateStubs = true
+    correctErrorTypes = true
 }
 
 dependencies {
@@ -42,9 +53,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Dagger
-    annotationProcessor "com.google.dagger:dagger-compiler:$project.DAGGER_VERSION"
+    kapt "com.google.dagger:dagger-compiler:$project.DAGGER_VERSION"
     implementation "com.google.dagger:dagger:$project.DAGGER_VERSION"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$project.DAGGER_VERSION"
+    kapt "com.google.dagger:dagger-android-processor:$project.DAGGER_VERSION"
     implementation "com.google.dagger:dagger-android-support:$project.DAGGER_VERSION"
     implementation "com.google.dagger:dagger-android:$project.DAGGER_VERSION"
     kapt "com.google.dagger:dagger-compiler:$project.DAGGER_VERSION"
@@ -53,10 +64,18 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:$project.RX_JAVA_VERSION"
     implementation "io.reactivex.rxjava2:rxandroid:$project.RX_ANDROID_VERSION"
 
+    // Room
+    implementation "android.arch.persistence.room:runtime:$ROOM_VERSION"
+    implementation "android.arch.persistence.room:rxjava2:$ROOM_VERSION"
+    kapt "android.arch.persistence.room:compiler:$ROOM_VERSION"
+
     // Lifecycle
     implementation "android.arch.lifecycle:runtime:$project.LIFECYCLE_VERSION"
     implementation "android.arch.lifecycle:extensions:$project.LIFECYCLE_VERSION"
-    annotationProcessor "android.arch.lifecycle:compiler:$project.LIFECYCLE_VERSION"
+    kapt "android.arch.lifecycle:compiler:$project.LIFECYCLE_VERSION"
+
+    // Databinding
+    kapt "com.android.databinding:compiler:3.0.0-beta6"
 
     // Test
     testImplementation 'junit:junit:4.12'
