--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,15 +7,15 @@ apply plugin: 'kotlin-android-extensions'
 project.ext {
     SUPPORT_LIBRARY_VERSION = "26.1.0"
     DAGGER_VERSION = "2.11"
-    ROOM_VERSION = "1.0.0-alpha9-1"
+    ROOM_VERSION = "1.0.0"
     RX_JAVA_VERSION = "2.1.2"
     RX_ANDROID_VERSION = "2.0.1"
-    LIFECYCLE_VERSION = "1.0.0-alpha9-1"
+    LIFECYCLE_VERSION = "1.0.0"
 }
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.meier.marina.trainme"
         minSdkVersion 21
@@ -75,7 +75,7 @@ dependencies {
     kapt "android.arch.lifecycle:compiler:$project.LIFECYCLE_VERSION"
 
     // Databinding
-    kapt "com.android.databinding:compiler:3.0.0-beta6"
+    kapt "com.android.databinding:compiler:3.1.0-alpha08"
 
     // Test
     testImplementation 'junit:junit:4.12'
